# nonebot-plugin-chess

./: README.md  pyproject.toml
nonebot_plugin_chess/: __init__.py  config.py  game.py  model.py
nonebot_plugin_chess/migrations/: 32c01e50814d_init_db.py  62899ffdd34f_init_db.py
