[tool.poetry]
name = "nonebot_plugin_chess"
version = "0.2.9"
description = "Nonebot2 国际象棋插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-chess"
repository = "https://github.com/noneplugin/nonebot-plugin-chess"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-rc.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
chess = "^1.9.0"
nonebot-plugin-htmlrender = ">=0.0.4"
nonebot-plugin-datastore = "^0.4.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
