[tool.poetry]
name = "nonebot_plugin_chess"
version = "0.4.1"
description = "Nonebot2 国际象棋插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-chess"
repository = "https://github.com/noneplugin/nonebot-plugin-chess"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.0", extras = ["fastapi"] }
nonebot-plugin-send-anything-anywhere = "^0.2.7"
nonebot-plugin-session = ">=0.0.5,<0.1.0"
nonebot-plugin-userinfo = ">=0.0.1,<0.1.0"
nonebot-plugin-datastore = "^1.0.0"
nonebot-plugin-htmlrender = "^0.2.0"
chess = "^1.9.0"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.0"
black = "^22.1.0"

[tool.nonebot]
plugins = ["nonebot_plugin_chess"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
